{
  "version": 4,
  "terraform_version": "1.2.6",
  "serial": 13,
  "lineage": "0eae2c4f-918b-bd81-c28f-264a86d2be25",
  "resources": [
    {
      "mode": "data",
      "type": "aws_vpc",
      "name": "selected",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:943249734630:vpc/vpc-0a7ed3f326f2f9146",
            "cidr_block": "172.31.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-0aec4ce5e228d6e33",
                "cidr_block": "172.31.0.0/16",
                "state": "associated"
              }
            ],
            "default": true,
            "dhcp_options_id": "dopt-0c2da233a7333dde9",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0a7ed3f326f2f9146",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-07b6e6ed98fe2d52b",
            "owner_id": "943249734630",
            "tags": {
              "Name": "default"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb",
      "name": "app-lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:943249734630:loadbalancer/app/phonebook-lb-tf/0128e87f8976da38",
            "arn_suffix": "app/phonebook-lb-tf/0128e87f8976da38",
            "desync_mitigation_mode": "defensive",
            "dns_name": "phonebook-lb-tf-1348211496.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:943249734630:loadbalancer/app/phonebook-lb-tf/0128e87f8976da38",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "phonebook-lb-tf",
            "security_groups": [
              "sg-0aa12bdf1b33d5adb"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0407027e8c214d0dc"
              },
              {
                "subnet_id": "subnet-0574669c532fc6379"
              },
              {
                "subnet_id": "subnet-06dabeb1d4245c996"
              },
              {
                "subnet_id": "subnet-0e20d5b9945dc9c2b"
              },
              {
                "subnet_id": "subnet-0e2d65bef713deb71"
              },
              {
                "subnet_id": "subnet-0e8d93c2206ad4db8"
              }
            ],
            "subnets": [
              "subnet-0407027e8c214d0dc",
              "subnet-0574669c532fc6379",
              "subnet-06dabeb1d4245c996",
              "subnet-0e20d5b9945dc9c2b",
              "subnet-0e2d65bef713deb71",
              "subnet-0e8d93c2206ad4db8"
            ],
            "vpc_id": "vpc-0a7ed3f326f2f9146",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.alb-sg",
            "data.aws_subnets.example",
            "data.aws_vpc.selected"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_listener",
      "name": "app-listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:943249734630:listener/app/phonebook-lb-tf/0128e87f8976da38/b925549504215223",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:943249734630:targetgroup/phonebook-lb-tg/3f2897b8fd8b119c",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:943249734630:listener/app/phonebook-lb-tf/0128e87f8976da38/b925549504215223",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:943249734630:loadbalancer/app/phonebook-lb-tf/0128e87f8976da38",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_alb.app-lb",
            "aws_alb_target_group.app-lb-tg",
            "aws_security_group.alb-sg",
            "data.aws_subnets.example",
            "data.aws_vpc.selected"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_target_group",
      "name": "app-lb-tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:943249734630:targetgroup/phonebook-lb-tg/3f2897b8fd8b119c",
            "arn_suffix": "targetgroup/phonebook-lb-tg/3f2897b8fd8b119c",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:943249734630:targetgroup/phonebook-lb-tg/3f2897b8fd8b119c",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "phonebook-lb-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0a7ed3f326f2f9146"
          },
          "dependencies": [
            "data.aws_vpc.selected"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:943249734630:security-group/sg-0aa12bdf1b33d5adb",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0aa12bdf1b33d5adb",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "ALBSecurityGroup-tf",
            "name_prefix": "",
            "owner_id": "943249734630",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "TF_ALBSecurityGroup"
            },
            "tags_all": {
              "Name": "TF_ALBSecurityGroup"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a7ed3f326f2f9146"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpc.selected"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "db-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:943249734630:security-group/sg-0eef50c057dd1e950",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0eef50c057dd1e950",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-007f2a4ac4999aa74"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "RDSSecurityGroup-tf",
            "name_prefix": "",
            "owner_id": "943249734630",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "TF_RDSSecurityGroup"
            },
            "tags_all": {
              "Name": "TF_RDSSecurityGroup"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a7ed3f326f2f9146"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.alb-sg",
            "aws_security_group.server-sg",
            "data.aws_vpc.selected"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "server-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:943249734630:security-group/sg-007f2a4ac4999aa74",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-007f2a4ac4999aa74",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0aa12bdf1b33d5adb"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "WebServerSecurityGroup-tf",
            "name_prefix": "",
            "owner_id": "943249734630",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "TF_WebServerSecurityGroup"
            },
            "tags_all": {
              "Name": "TF_WebServerSecurityGroup"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a7ed3f326f2f9146"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.alb-sg",
            "data.aws_vpc.selected"
          ]
        }
      ]
    }
  ]
}